--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "typescript": "4.9.4",
+    "wagmi": "^0.10.10",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
